--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://kodiidok:PU1U8aygeaV7y6Fe@cluster0.mqvceon.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://latjkansa:Y73FgLRj5tJgTTU@cluster0.8baiubl.mongodb.net/?retryWrites=true&w=majority
