--- a/deployment.yml
+++ b/deployment.yml
@@ -19,3 +19,21 @@ spec:
         image: thilina9718/thilina_app_01:latest
         ports:
         - containerPort: 3000
+
+
+---
+
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: service-nodeapp
+spec:
+  selector:
+    app: deploy-app
+  type: LoadBalancer
+  ports:
+  - protocol: TCP
+    port: 5000
+    targetPort: 3000
+    nodePort: 31110
