--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > ${HOME}/.kube/config
         cat ${HOME}/.kube/config
     - name: Use context
-      run: kubectl config use-context octobay-api
+      run: kubectl config use-context minikube
     - name: Deploy to K8s
       run: kubectl apply -f deployment.yml
     - name: Test service URLs
