--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,21 +33,27 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
-    name: Deploy to Kubernetes
     runs-on: ubuntu-latest
+    name: build example and deploy to minikube
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Create kubeconfig
+    - uses: actions/checkout@v2
+    - name: Start minikube
+      uses: medyagh/setup-minikube@master
+    - name: Try the cluster !
+      run: kubectl get pods -A
+    - name: Build image
       run: |
-        mkdir ${HOME}/.kube
-        echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > ${HOME}/.kube/config
-        cat ${HOME}/.kube/config
-    - name: Use context
-      run: kubectl config use-context minikube
-    - name: Deploy to K8s
-      run: kubectl apply -f deployment.yml
+        export SHELL=/bin/bash
+        eval $(minikube -p minikube docker-env)
+        docker build -f ./Dockerfile -t thilina9718/thilina_app_01:latest .
+        echo -n "verifying images:"
+        docker images        
+    - name: Deploy to minikube
+      run:
+        kubectl apply -f deployment.yml
     - name: Test service URLs
       run: |
-          minikube service list
-          minikube service service-nodeapp --url
+        minikube service list
+        minikube service service-nodeapp --url
+        echo "------------------opening the service------------------"
+        curl $(minikube service service-nodeapp --url)
