--- a/deployment.yml
+++ b/deployment.yml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: nodeserver
         image: thilina9718/thilina_app_01:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 3000
 
