--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,5 +56,5 @@ jobs:
         kubectl expose deployment deployment-nodeapp --type=LoadBalancer --port=8080
         minikube service list
         minikube service service-nodeapp --url
-        echo "------------------opening the service-------------------"
-        curl $(minikube service service-nodeapp --url)
+        # echo "------------------opening the service-------------------"
+        # curl $(minikube service service-nodeapp --url)
