--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,5 +56,6 @@ jobs:
         kubectl expose deployment deployment-nodeapp --type=LoadBalancer --port=8080
         minikube service list
         minikube service service-nodeapp --url
+        kubectl get ep -o wide
         echo "------------------opening the service-------------------"
         curl $(minikube service service-nodeapp --url)
