--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         export SHELL=/bin/bash
         eval $(minikube -p minikube docker-env)
-        docker build -f ./Dockerfile -t thilina9718/thilina_app_01:latest .
+        docker build -f ./Dockerfile -t thilina9718/thilina_app_01 .
         echo -n "verifying images:"
         docker images        
     - name: Deploy to minikube
